# auto_fans

./: .gitignore  AutoFans.spec  AutoFansFinish.spec  AutoFansStart.spec  install.md  pytest.ini  requirements.txt
api/: .env.example  README.md  alembic.ini  playwright_install.md  playwright方案.md  pyproject.toml
api/alembic/: README  env.py
api/app/: __init__.py  main.py
api/scripts/: backfill_doctor_pinyin.py  check_admin_users.py  check_auth.py  check_automation.py  check_automation_results.py  check_comment_bank.py  check_comment_recheck.py  check_daily_tasks.py  check_db.py  check_doctor_keywords.py  check_doctors.py  check_integration.py  clear_task_records.py  create_all.py  init_data.py  seed_admin.py  seed_doctor_provinces.py  seed_mock_data.py
api/tests/: test_automation_home_feed_flow.py  test_automation_timing_defaults.py  test_daily_task_dispatch_balancing.py  test_quality_flows.py  test_task_pool_claim_phase2.py
automation_client/: .env.example  README.md  new_flow.md  pyproject.toml  steps.md  win_gaohaibin_device_test.py  win_open_douyin_only.py  win_search_video_column_probe.py  win_task54_device7_search_test.py  win_task_flow_from_db.py  win_test.py  win_video_tab_test.py
automation_client/app/: __init__.py  adb.py  api_client.py  appium_driver.py  appium_server_manager.py  config.py  device_manager.py  device_monitor.py  device_status.py  douyin_actions.py  douyin_page_state.py  douyin_search_support.py  douyin_task_executor.py  logger.py  main.py  task_runner.py  task_worker.py
automation_client/config/: locators.yaml
automation_client/scripts/: analyze_douyin_author.py  check_device_region.sh  clean_appium_session.sh  clear_session.sh  collect_video_authors.sh  open_douyin.sh  return_home.sh  run_current_home_video_actions.py  tap_search.sh  test_comment_input.sh
(+200 files in other folders)
