[project]
name = "douyin-auto-api"
version = "0.1.0"
description = "FastAPI backend for Douyin Android automation admin."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.115.0",
  "openpyxl>=3.1.0",
  "passlib>=1.7.4",
  "playwright>=1.44.0",
  "pydantic-settings>=2.2.0",
  "pymysql>=1.1.0",
  "pypinyin>=0.51.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "selenium>=4.20.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
