[project]
name = "douyin-auto-automation-client"
version = "0.1.0"
description = "Python Appium automation client for Douyin Android testing."
requires-python = ">=3.11"
dependencies = [
  "Appium-Python-Client>=4.0.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "pydantic-settings>=2.2.0",
  "pywebview>=5.0",
  "PyYAML>=6.0.0",
  "selenium>=4.20.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
